delete double quotes and extra elements

--- a/src/blocks/donutChart/donutChart.pug
+++ b/src/blocks/donutChart/donutChart.pug
@@ -1,23 +1,23 @@
-div(class="row donut")
+div(class='row donut')
     svg
-        circle(class="circle")
-        circle(class="circle1")
-        circle(class="circle2")
-        circle(class="circle3")   
-        g(class="chart-text")
-            text(x="42%" y="35%" class="chart-number") 260
-            text(x="42%" y="36%" class="chart-label") голосов
-    figcaption(class="figure-key")
-        ul(class="figure-key-list" aria-hidden="true" role="presentation")
+        circle(class='circle')
+        circle(class='circle1')
+        circle(class='circle2')
+        circle(class='circle3')   
+        g(class='chart-text')
+            text(x='42%' y='35%' class='chart-number') 260
+            text(x='42%' y='36%' class='chart-label') голосов
+    figcaption(class='figure-key')
+        ul(class='figure-key-list' aria-hidden='true' role='presentation')
             li
-                span(class="shape-circle shape-fuschia")            
+                span(class='shape-circle shape-fuschia')            
                 |             Великолепно
             li
-                span(class="shape-circle shape-lemon-lime") 
+                span(class='shape-circle shape-lemon-lime') 
                 |             Хорошо
             li
-                span(class="shape-circle shape-blue")
+                span(class='shape-circle shape-blue')
                 |             Удовлетворительно
             li
-                span(class="shape-circle shape-grey")
+                span(class='shape-circle shape-grey')
                 |             Разочарован
