--- a/src/components/form-register/form-register.pug
+++ b/src/components/form-register/form-register.pug
@@ -24,7 +24,7 @@ include ../mixins.pug
 
       .row
         include ../../blocks/toggle/toggle.pug
-        p(class="signup-offer") Получать спецпредложения
+        p(class='signup-offer') Получать спецпредложения
 
       button(type='button' class='btn btn-confirm signup-button--payment') Перейти к оплате
       
