--- a/src/components/info-room/info-room.pug
+++ b/src/components/info-room/info-room.pug
@@ -1,43 +1,43 @@
 include ../mixins.pug
 
-div(class="information")
-    div(class="information-top-part")
-        div(class="gallery-top--responsive")
-            img(src=require("../images/mainA-resp.jpg"))
-        div(class="gallery-top")
-            img(src=require("../images/mainA.jpg"))
-        div(class="gallery-bottom")
-            div(class="gallery-bottom--first")
+div(class='information')
+    div(class='information-top-part')
+        div(class='gallery-top--responsive')
+            img(src=require('../images/mainA-resp.jpg'))
+        div(class='gallery-top')
+            img(src=require('../images/mainA.jpg'))
+        div(class='gallery-bottom')
+            div(class='gallery-bottom--first')
                 img(src=require('../images/gallery-first.jpg'))
-            div(class="gallery-bottom--second")
-                img(src=require("../images/gallery-second.jpg"))
-    div(class="information-bottom-part row" class="container flex-row")
-        div(class="bottom-part--left")
-            div(class="row room-information--info")
+            div(class='gallery-bottom--second')
+                img(src=require('../images/gallery-second.jpg'))
+    div(class='information-bottom-part row' class='container flex-row')
+        div(class='bottom-part--left')
+            div(class='row room-information--info')
                 .blocks
-                    h3(class="information-title information-title--info") Сведения о номере
-                    +room-information("mood", "Комфорт", "Шумопоглощающие стены", " information__border") 
-                    +room-information("location_city", "Удобство", "Окно в каждой из спален", " information__border")
-                    +room-information("whatshot", "Уют", "Номер оснащён камином")
+                    h3(class='information-title information-title--info') Сведения о номере
+                    +room-information('mood', 'Комфорт', 'Шумопоглощающие стены', ' information__border') 
+                    +room-information('location_city', 'Удобство', 'Окно в каждой из спален', ' information__border')
+                    +room-information('whatshot', 'Уют', 'Номер оснащён камином')
                 .blocks.information-impression
-                    h3(class="information-title information-title--impression") Впечатления от номера
+                    h3(class='information-title information-title--impression') Впечатления от номера
                     include ../../blocks/donutChart/donutChart.pug
             .blocks 
-                h3(class="information-title information-title--details") Отзывы посетителей номера
-                +feedback(require("../images/photo1.jpg"), "Мурад Сарафанов", '5 дней назад', "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.")
-                div(class="information-impression--second")
-                    +feedback(require("../images/photo2.jpg"), "Патрисия Стёклышкова", 'Неделю назад', "Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент")
-            div(class="flex-row")
+                h3(class='information-title information-title--details') Отзывы посетителей номера
+                +feedback(require('../images/photo1.jpg'), 'Мурад Сарафанов', '5 дней назад', 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.')
+                div(class='information-impression--second')
+                    +feedback(require('../images/photo2.jpg'), 'Патрисия Стёклышкова', 'Неделю назад', 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент')
+            div(class='flex-row')
                 .blocks.information-rules
-                    h3(class="information-title information-title--rules") Правила
-                    +bullet-list("Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00" + ", "   +  " а выезд до 12:00 ")
+                    h3(class='information-title information-title--rules') Правила
+                    +bullet-list('Нельзя с питомцами', 'Без вечеринок и мероприятий', 'Время прибытия — после 13:00' + ', '   +  ' а выезд до 12:00 ')
                 .blocks.information-cancel
-                    h3(class="information-title information-title--cancel") Отмена
-                    p(style='white-space:pre;' class="information-text")
+                    h3(class='information-title information-title--cancel') Отмена
+                    p(style='white-space:pre;' class='information-text')
                         | Бесплатная отмена в течение 48 ч. После
                         | этого при отмене не позднее чем за 5 дн. до 
                         | прибытия вы получите полный возврат за 
                         | вычетом сбора за услуги.
-        div(class="bottom-part__right")
+        div(class='bottom-part__right')
             include ../../blocks/calculator/calculator.pug
 
