--- a/src/blocks/airdatepicker/single_airpicker.pug
+++ b/src/blocks/airdatepicker/single_airpicker.pug
@@ -4,5 +4,4 @@ div.single-arrow-wrapper
         data-multiple-dates-separator=' - '
         data-language='en'
         placeholder='ДД.ММ.ГГГГ'
-        id ='single__input__range'
-        class='datepicker-here')
+        id ='single__input__range')
