--- a/src/components/mixins.pug
+++ b/src/components/mixins.pug
@@ -64,7 +64,7 @@ mixin card-room(slickName, imgNameOne, imgNameTwo, imgNameThree, imgNameFour, nu
                     span=  number
                 p(class='card-price')= price  
                     span(class='card-span')  в сутки
-            hr
+            .line
             .flex-row
               div(class='Stars stars__decor' style= style)
               p(class='card-price')= feedback
