--- a/src/blocks/littleDropdown/littleDropdown.scss
+++ b/src/blocks/littleDropdown/littleDropdown.scss
@@ -65,7 +65,6 @@
 .little-dropdowns .dd-menu li {
   padding: 10px 20px;
   white-space: nowrap;
-  width: 390px;
   display: flex;
   justify-content: space-between;
 }
@@ -134,3 +133,18 @@
   cursor: pointer;
 }
 
+@media only screen and (max-width: 400px) {
+  .comfort-menu{
+    width: 330px;
+  }
+}
+
+@media only screen and (max-width: 380px) {
+  .little-dropdowns .dd-menu {
+    width: 300px;
+  }
+
+  .little-dropdowns .dd-menu  li {
+    padding: 10px 0px;
+  }
+}
