--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -10,14 +10,14 @@
   &-number {
     font-style: normal;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 1.3rem;
     margin-top: 5px;
     color: #1f2041;
   }
   &-price {
     font-style: normal;
     font-weight: bold;
-    font-size: 21px;
+    font-size: 1.16rem;
     color: rgba(31, 32, 65, 0.5);
     padding-top: 10px;
     padding-bottom: 10px;
@@ -29,7 +29,7 @@
 }
 
 .line {
-  border-bottom: 1px solid rgba(31, 32, 65, 0.1);
+  border-bottom: 2px solid rgb(220,220,220);
 }
 
 :root {
@@ -49,7 +49,7 @@
 
 .Stars::before {
   content: "★★★★★";
-  font-size: 34px;
+  font-size: 1.88rem;
   letter-spacing: 7px;
   background: -webkit-gradient(
     linear,
