correct like-buttons and expandable checkbox list

--- a/src/blocks/airdatepicker/airdatepicker.scss
+++ b/src/blocks/airdatepicker/airdatepicker.scss
@@ -40,15 +40,15 @@
   color: $black-text;
 }
 
-#single__input__range {
-  width: 395px;
-  height: 65px;
-  border: 1px solid rgba(31, 32, 65, 0.25);
-  box-sizing: border-box;
-  border-radius: 4px;
-  font-size: 1rem;
-  padding-left: 20px;
-}
+// #single__input__range {
+//   width: 395px;
+//   height: 65px;
+//   border: 1px solid rgba(31, 32, 65, 0.25);
+//   box-sizing: border-box;
+//   border-radius: 4px;
+//   font-size: 1rem;
+//   padding-left: 20px;
+// }
 
 .range {
   width: 220px;
@@ -72,6 +72,27 @@
 @media only screen and (max-width: 400px) {
   .range {
     padding-left: 10px;
+  }
+
+  .datepicker {
+    background: #fff;
+    border: 1px solid #dbdbdb;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    box-sizing: content-box;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-size: 18px;
+    color: #1f2041;
+    width: 320px;
+    position: absolute;
+    left: -100000px;
+    opacity: 0;
+    transition: opacity 0.3s ease, left 0s 0.3s, -webkit-transform 0.3s ease;
+    transition: opacity 0.3s ease, transform 0.3s ease, left 0s 0.3s;
+    transition: opacity 0.3s ease, transform 0.3s ease, left 0s 0.3s,
+      -webkit-transform 0.3s ease;
+    // z-index: 100;
   }
 }
 
@@ -146,7 +167,7 @@
   -ms-flex-pack: center;
   justify-content: center;
   height: 62px;
-  z-index: 1;
+  // z-index: 1;
 }
 .datepicker--cell.-focus- {
   background: #f0f0f0;
@@ -321,24 +342,23 @@
 }
 
 .datepicker {
-  display: none;
-  // background: #fff;
-  // border: 1px solid #dbdbdb;
-  // box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-  // border-radius: 4px;
-  // box-sizing: content-box;
-  // font-family: "Montserrat";
-  // font-style: normal;
-  // font-size: 18px;
-  // color: #1f2041;
-  // width: 26.5em;
-  // position: absolute;
-  // left: -100000px;
-  // opacity: 0;
-  // transition: opacity 0.3s ease, left 0s 0.3s, -webkit-transform 0.3s ease;
-  // transition: opacity 0.3s ease, transform 0.3s ease, left 0s 0.3s;
-  // transition: opacity 0.3s ease, transform 0.3s ease, left 0s 0.3s,
-  //   -webkit-transform 0.3s ease;
+  background: #fff;
+  border: 1px solid #dbdbdb;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  box-sizing: content-box;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-size: 18px;
+  color: #1f2041;
+  width: 560px;
+  position: absolute;
+  left: -100000px;
+  opacity: 0;
+  transition: opacity 0.3s ease, left 0s 0.3s, -webkit-transform 0.3s ease;
+  transition: opacity 0.3s ease, transform 0.3s ease, left 0s 0.3s;
+  transition: opacity 0.3s ease, transform 0.3s ease, left 0s 0.3s,
+    -webkit-transform 0.3s ease;
   // z-index: 100;
 }
 .datepicker.-from-top- {
@@ -397,7 +417,7 @@
   border-right: 1px solid #dbdbdb;
   width: 10px;
   height: 10px;
-  z-index: -1;
+  // z-index: -1;
 }
 .-top-left- .datepicker--pointer,
 .-top-center- .datepicker--pointer,
@@ -713,7 +733,7 @@
   top: -3px;
   right: -2px;
   bottom: -2px;
-  z-index: -1;
+  // z-index: -1;
   opacity: 0;
 }
 .datepicker--time-current-hours.-focus-:after,
@@ -917,4 +937,32 @@
 .datepicker--cell-year.-other-decade-:empty {
   background: none;
   border: none;
+}
+
+
+@media only screen and (max-width: 400px) {
+  .range {
+    padding-left: 10px;
+  }
+
+  .datepicker {
+    background: #fff;
+    border: 1px solid #dbdbdb;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    box-sizing: content-box;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-size: 18px;
+    color: #1f2041;
+    width: 320px;
+    position: absolute;
+    left: -100000px;
+    opacity: 0;
+    transition: opacity 0.3s ease, left 0s 0.3s, -webkit-transform 0.3s ease;
+    transition: opacity 0.3s ease, transform 0.3s ease, left 0s 0.3s;
+    transition: opacity 0.3s ease, transform 0.3s ease, left 0s 0.3s,
+      -webkit-transform 0.3s ease;
+    // z-index: 100;
+  }
 }
