--- a/src/blocks/range-slider/range-slider.scss
+++ b/src/blocks/range-slider/range-slider.scss
@@ -12,7 +12,7 @@
   box-sizing: border-box;
   background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
   border: 2px solid #ffffff;
-  border-radius: 10px;
+  border-radius: 50%;
   outline: 0;
   margin-top: -3px;
 }
