--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -15,4 +15,5 @@ div
         +list('Новости')
         +list('Соглашения')
         +button-signin-header('Войти', 'signin-page.html', 'header-btn-signin' )
-        +button-signup('Зарегистрироватьcя', 'signup-page.html').header__btn--signup
+        .header-btn-signup
+          +button-signup('Зарегистрироватьcя', 'signup-page.html')
