--- a/src/components/signin-page/signin-page.pug
+++ b/src/components/signin-page/signin-page.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title my jade template
+    meta(name="viewport", content="width=, initial-scale=1.0")
   body
     include ../header/header.pug
     .clear
