--- a/src/components/components-page/components-page.scss
+++ b/src/components/components-page/components-page.scss
@@ -66,6 +66,7 @@
   cursor: pointer;
   &:before {
     content: "\2714";
+    font-family: 'Times New Roman', Times, serif;
     border-radius: 0.2em;
     display: inline-block;
     width: 29px;
@@ -102,120 +103,6 @@
   font-weight: bold;
   letter-spacing: 0.9px;
   margin-top: -3px;
-}
-
-.bullet-list {
-  overflow: hidden;
-  display: inline-block;
-  text-align: left;
-  vertical-align: middle;
-  color: rgba(31, 32, 65, 0.75);
-  border-radius: 5px;
-  margin-left: -30px;
-  margin-top: 10px;
-  > li {
-    list-style: none;
-    position: relative;
-    padding: 0 0 0 1.7em;
-    transition: 0.12s;
-    font-size: 20.6px;
-    font-weight: normal;
-    margin-bottom: 1.3em;
-    font-weight: bold;
-    &::before {
-      position: absolute;
-      content: "\2022";
-      font-family: Arial;
-      color: grey;
-      top: -7px;
-      left: 5px;
-      text-align: center;
-      font-size: 2.5em;
-      opacity: 0.5;
-      line-height: 1;
-      transition: 0.5s;
-    }
-  }
-}
-
-.room__information {
-  width: 410px;
-  &__wrapper {
-    display: flex;
-    flex-direction: row;
-    padding: 25px 10px 25px 13px;
-    &__description {
-      & h4 {
-        margin-block-start: 0em;
-        margin-block-end: 0.1em;
-        margin-left: 0.83rem;
-        font-style: normal;
-        font-size: 22px;
-        font-weight: bold;
-        line-height: 24px;
-        color: rgba(31, 32, 65, 0.75);
-      }
-      & p {
-        margin-block-start: 0;
-        margin-block-end: 0em;
-        margin-top: 10px;
-        font-style: normal;
-        font-size: 18px;
-        color: rgba(31, 32, 65, 0.75);
-        margin-left: 15px;
-        font-style: normal;
-        font-size: 1.14rem;
-        font-weight: 300;
-      }
-    }
-  }
-  &__icon {
-    font-size: 40px;
-    color: #bc9cff;
-  }
-}
-
-.border {
-  border-bottom: 1px solid grey;
-}
-
-.room__feedback__wrapper {
-  &__person {
-    display: flex;
-    flex-direction: row;
-    margin-left: -15px;
-    margin-top: 30px;
-    & img {
-      width: 120px;
-      height: 120px;
-    }
-    & h4 {
-      margin-block-start: 1em;
-      margin-block-end: 0.4em;
-      font-size: 21px;
-      font-weight: bold;
-    }
-    & p {
-      margin-block-start: 0em;
-      margin-block-end: 0em;
-      font-size: 20px;
-      font-weight: 300;
-    }
-  }
-  &__evaluation {
-    display: flex;
-    margin-top: -24px;
-    & p {
-      margin-left: 27px;
-      margin-top: 2px;
-      font-weight: 500;
-      line-height: 36px;
-    }
-  }
-}
-
-.room__feedback__text{
-  margin-left: 20px;
 }
 
 #slider-range {
