--- a/src/components/form-register/form-register.scss
+++ b/src/components/form-register/form-register.scss
@@ -1,50 +1,70 @@
-  
-  .wrap{
-    width: 560px;
-    background: #FFFFFF;
-    border: 1px solid rgba(0, 0, 0, 0.12);
-    box-sizing: border-box;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
+.wrap {
+  width: 560px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  margin: 0 auto;
+}
+
+.container-form {
+  padding: 32px 30px 40px 40px;
+}
+
+.signup-input--name {
+  padding-top: 5px;
+}
+
+.signup-input--surname {
+  padding-top: 15px;
+}
+
+.signup-input--birthday {
+  padding-top: 5px;
+}
+
+.signup-input--data {
+  padding-top: 25px;
+}
+
+.signup-input--data--password {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+.signup-button--payment {
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.sugnup-text {
+  margin-top: 20px;
+  font-size: 19px;
+}
+
+.signup-offer {
+  margin-left: 15px;
+}
+
+@media only screen and (max-width: 600px) {
+  .container-form {
+    padding: 15px 5px;
+  }
+
+  .sugnup-text {
     margin: 0 auto;
-  }
-
-  .container-form{
-    padding: 32px 30px 40px 40px;
-  }
-
-  .signup-input--name{
-    padding-top: 5px;
-  }
-
-  
-  .signup-input--surname{
-    padding-top: 15px;
-  }
-
-  .signup-input--birthday{
-    padding-top: 5px;
-  }
-
-  .signup-input--data{
-    padding-top: 25px;
-  }
-
-  .signup-input--data--password{
-    padding-top: 25px;
-    padding-bottom: 25px;
-  }
-
-  .signup-button--payment{
-    margin-top: 25px;
-    margin-bottom: 25px;
-  }
-
-  .sugnup-text{
     margin-top: 20px;
-    font-size: 19px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .container-form {
+    padding: 15px 5px;
   }
 
-  .signup-offer{
-    margin-left: 15px;
+  .sugnup-text {
+    margin: 0 auto;
+    margin-top: 20px;
   }
+}
