--- a/src/components/room-page/room-page.scss
+++ b/src/components/room-page/room-page.scss
@@ -106,6 +106,14 @@ div.room-card__decor {
   scroll-margin-bottom: 20px;
 }
 
+.settings-extracomfort{
+  margin-top: 15px;
+}
+
+.panagination-subtitle{
+  text-align: center;
+}
+
 @media only screen and (max-width: 1600px) {
   .settings-main-title{
     text-align: center;
