--- a/src/components/signin-form/signin-form.scss
+++ b/src/components/signin-form/signin-form.scss
@@ -1,5 +1,3 @@
-
-
 .signin-container-form {
   padding: 32px 30px 40px 40px;
 }
@@ -23,11 +21,74 @@
   line-height: 18px;
 }
 
-.text-signin{
-    margin-top: 65px;
+.text-signin {
+  margin-top: 65px;
 }
 
-.btn-create{
-    margin-top: 45px;
+.btn-create {
+  margin-top: 45px;
 }
 
+
+@media only screen and (max-width: 600px) {
+  .wrap {
+    width: 450px;
+  }
+
+  .signin-container-form {
+    padding: 15px 5px;
+  }
+
+  .input-text {
+    width: 420px;
+  }
+
+  // .text-signin {
+  //   margin: 0 auto;
+  //   margin-top: 35px;
+  // }
+}
+
+
+@media only screen and (max-width: 450px) {
+  .wrap {
+    width: 400px;
+  }
+
+  .signin-container-form {
+    padding: 15px 5px;
+  }
+
+  .input-text {
+    width: 390px;
+  }
+
+  .text-signin {
+    margin: 0 auto;
+    margin-top: 35px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .wrap {
+    width: 310px;
+    background: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    margin: 0 auto;
+  }
+
+  .signin-container-form {
+    padding: 15px 5px;
+  }
+
+  .input-text {
+    width: 300px;
+  }
+
+  .text-signin {
+    margin: 0 auto;
+    margin-top: 35px;
+  }
+}
