--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -47,7 +47,7 @@ p {
   font-family: "MaterialIcons";
   font-weight: normal;
   font-style: normal;
-  font-size: 3.83rem; /* Preferred icon size */
+  font-size: 3.83rem;
   display: inline-block;
   line-height: 1;
   text-transform: none;
