--- a/src/components/signup-page/signup-page.scss
+++ b/src/components/signup-page/signup-page.scss
@@ -1,6 +1,6 @@
 .main-background {
   min-height: 1010px;
-  background-image: url(../images/bg_in.jpg);
+  background-image: url(../../images/bg_in.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -10,7 +10,7 @@
 
 .sugnup-background {
   min-height: 930px;
-  background-image: url(../images/bg_in.jpg);
+  background-image: url(../../images/bg_in.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
