--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,3 +1,5 @@
+@import "../components/variables.scss";
+
 .nav-wrapper{
   padding-bottom: 10px;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
